# python-victorialogs-handler

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yaml  docs.yml
examples/: basic_example.py  dict_example.py  duration_example.py  extended_example.py
src/vlogs_handler/: __init__.py  encoder.py  handler.py  log.py  request.py  technical.md
tests/: test_encoder.py  test_handler.py  test_request.py
